# Aleph

./: .clang-tidy  .cmake-lint  .gitignore  CMakeLists.txt  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  conanfile.py  sonar-project.properties
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  dependabot.yml
.github/actions/: setup-conan.yml
.github/actions/clusterfuzzlite/: action.yml
.github/actions/scorecard/: action.yml
.github/actions/setup-conan/: action.yml
.github/profiles/: fuzzing-host
.github/requirements/: cmakelang.txt  codespell.txt  conan.txt
.github/workflows/: codeql.yml  daily.yml  fuzzing.yml  pr-validation.yml  pull-request.yml  push.yml  quality.yml  sast.yml  scorecard.yml
chess/: CMakeLists.txt
chess/include/aleph/: chess.hpp
chess/include/aleph/chess/: attack_tables.hpp  board.hpp  board.inl  move.hpp  move_list.hpp  piece.hpp  square.hpp
chess/tests/: CMakeLists.txt  fuzz_board_constructor.cpp  fuzz_board_push.cpp  fuzz_move.cpp  test_board.cpp  test_move.cpp  test_move_list.cpp  test_piece.cpp  test_square.cpp
chess/tools/: table_builder.py
cmake/: test_macros.cmake
docs/: conf.py
docs/old/: index.md
platform/: CMakeLists.txt
platform/include/aleph/: platform.hpp
platform/include/aleph/platform/: allocation.hpp  compiler.hpp  intrinsics.hpp  log_info.hpp  logging.hpp  logging.inl  print_info.hpp
platform/include/aleph/platform/allocation/: init.hpp  init.inl  runtime.hpp  runtime.inl
platform/tests/: CMakeLists.txt  test_allocation.cpp
